test/fail/TermSplicing1.agda
open import Common.Prelude
open import Common.Reflect

module TermSplicing1 where

x = unquote Set
